assets/css/style.scss
---
---

@import "{{ site.theme }}";

.button.addon {
  background: transparent url(../images/addon.png) 0 0 no-repeat;
  background-position: center;
}

header h2 {
  width: 600px;
}

@media only screen and (max-width: 767px) {
  aside#sidebar a.button {
    display: unset !important;
  }
  header h2 {
    width: unset !important;
  }
}

